--- a/themes/nest/templates/article.html
+++ b/themes/nest/templates/article.html
@@ -6,7 +6,7 @@
 
 {% block headerstyle %}
     {% if article.illustration %}
-    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ SITEURL }}/images/{{ article.illustration }}'); background-position: center; ">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ SITEURL }}/{{ article.illustration }}'); background-position: center; ">
     {% else %}
     <div class="header-container gradient">
     {% endif %}
@@ -48,6 +48,6 @@
         {% endif %}
 
         {% include "disqus_script.html" %}
-        
+
     </div>
 {% endblock %}
