--- a/themes/nest/templates/period_archives.html
+++ b/themes/nest/templates/period_archives.html
@@ -5,7 +5,7 @@
 
 {% block headerstyle %}
     {% if NEST_HEADER_IMAGES %}
-    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ SITEURL }}/images/{{ NEST_HEADER_IMAGES }}'); background-position: center; ">
+    <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ SITEURL }}/{{ NEST_HEADER_IMAGES }}'); background-position: center; ">
     {% else %}
     <div class="header-container gradient">
     {% endif %}
@@ -38,4 +38,3 @@
         </div>
     </div>
 {% endblock content %}
-
